--- a/Javascript/Index2.html
+++ b/Javascript/Index2.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="Array.js"></script> -->
-     <script src="Operators.js"></script>
+     <script src="Function.js"></script>
+    <!-- <script src="Operators.js"></script> -->
 </body>
 </html>
