Js day2 Learning

--- a/Javascript/Index2.html
+++ b/Javascript/Index2.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <!-- <script src="Array.js"></script> -->
-     <script src="Operators.js"></script>
+     <!-- <script src="Operators.js"></script> -->
+      <!-- <script src="Variable.js"></script> -->
+      <script src="ScopeChain.js"></script> 
+      <!-- <script src="Hoisting.js"> </script> -->
 </body>
 </html>
