Remove Index2.html from Feature1

--- a/Javascript/Index.html
+++ b/Javascript/Index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javacsript</title>
+    <title>First </title>
 </head>
 <body>
-    <!-- <script src="Array.js"></script> -->
-     <script src="Function.js"></script>
-    <!-- <script src="Operators.js"></script> -->
+    <script>
+        console.log("Hello WOrld");
+    </script>
 </body>
 </html>
