new promise program

--- a/Day4/Index.html
+++ b/Day4/Index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
      <!-- <script src="Promises.js"> </script> -->
-    <script src="Map,filter,reduce.js"></script>
+    <!-- <script src="Map,filter,reduce.js"></script> -->
     <!-- <script src="Callback.js"></script> -->
-<!-- <script src="Promises.js"></script> -->
+<script src="Promises1.js"></script>
 </body>
 </html>
